# python-result

./: Makefile  README.md  pyproject.toml
result/: __init__.py  result.py
sample/: Makefile  sample.py
